--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/aleccool213/next-js-conf-talk#readme",
   "dependencies": {
+    "code-surfer": "^3.1.1",
     "mdx-deck": "4.0.0",
     "prettier": "1.19.1"
   }
